<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/offlineBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FAF1A8"
        android:visibility="visible"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/bannerIcon"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:src="@drawable/ic_no_internet"
                app:tint="@android:color/black" />

            <TextView
                android:id="@+id/bannerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Queued moods: 0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            app:shapeAppearanceOverlay="@style/CircularImageView"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:strokeColor="#EEEEEE"
            app:strokeWidth="2dp"
            android:elevation="5dp"/>

        <FrameLayout
            android:id="@+id/spinnerFrame"
            android:layout_width="264dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_field">

                <!-- Spinner -->
                <Spinner
                    android:id="@+id/moodSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="Click to Select a Mood"
                    android:prompt="@string/select_mood" />

                <!-- Dropdown Icon -->
                <ImageView
                    android:id="@+id/spinner_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_dropdown" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/reasonInput"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:background="@drawable/input_field"
                android:gravity="start|top"
                android:hint="Add Reason..."
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/reasonCharCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:padding="4dp"
                android:text="200"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </FrameLayout>

        <!-- Display Selected Location and number of tags -->
        <TextView
            android:id="@+id/selectedLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="#439DEB"
            android:textSize="14sp"
            android:visibility="gone" />

        <!-- Icons Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/importImageIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/import_image"
                app:tint="#878787" />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/location_icon"
                app:tint="#878787" />

            <ImageView
                android:id="@+id/visibilityIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_eye_open"
                app:tint="#878787" />

            <ImageView
                android:id="@+id/tagIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/tag_icon"
                app:tint="#878787" />
        </LinearLayout>

        <TextView
            android:id="@+id/timestampText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="4:24 PM - December 12, 2024"
            android:textColor="#757575"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/selectedImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="14dp"
            android:backgroundTint="#439DEB"
            android:text="Add Mood" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>
