<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_use_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#439DEB"
        android:elevation="4dp"
        android:padding="8dp"
        android:text="Use Current Location" />

    <Button
        android:id="@+id/btn_search_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#439DEB"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:text="Search Location" />

    <Button
        android:id="@+id/btn_remove_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#439DEB"
        android:text="Remove Location"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/btn_cancel_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB4343"
        android:text="Cancel"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:padding="8dp" />
</LinearLayout>
