...
            android:src="@drawable/ic_search"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            app:tint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/tag_search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="Search Users..."
            android:inputType="text"
...
